[gd_scene load_steps=8 format=3 uid="uid://ckxax18tflhon"]

[ext_resource type="Script" path="res://scenes/entities/beholder.gd" id="1_5t6kn"]
[ext_resource type="PackedScene" uid="uid://li4usn4jjn5a" path="res://scenes/entities/cone.tscn" id="1_hq386"]

[sub_resource type="SphereMesh" id="SphereMesh_gei3n"]

[sub_resource type="SphereMesh" id="SphereMesh_dcq1t"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4326j"]
albedo_color = Color(1, 0.0666667, 0, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_28mae"]
points = PackedVector3Array(-0.000195742, 1, -0.000195742, 0.194988, -1, -0.980814, -0.000195742, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, -0.000195742, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, -0.382733, -1, 0.923845, -0.195184, -1, 0.980619, -0.000195742, -1, 1, 0.194988, -1, 0.980619, 0.382537, -1, 0.923845, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980619, -1, 0.194988, 1, -1, -0.000195742, 0.980619, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041)

[sub_resource type="SphereShape3D" id="SphereShape3D_8qua6"]

[node name="Beholder" type="CharacterBody3D"]
script = ExtResource("1_5t6kn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_gei3n")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -0.535861)
mesh = SubResource("SphereMesh_dcq1t")
surface_material_override/0 = SubResource("StandardMaterial3D_4326j")

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.614751)

[node name="Cone" parent="VisionArea" instance=ExtResource("1_hq386")]
transform = Transform3D(20, 0, 0, 0, -8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, -19.6254)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(20, 0, 0, 0, -8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, -19.6254)
shape = SubResource("ConvexPolygonShape3D_28mae")

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="VisionRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0218014, 0)
shape = SubResource("SphereShape3D_8qua6")

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
